--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,12 @@
     "Audience": "YourAppUsers",
     "ExpiryMinutes": 60
   },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "arundeshan@gmail.com",
+    "SmtpPassword": "oogfrcaziqavyvpm",
+    "FromEmail": "arundeshan@gmail.com"
+  },
   "AllowedHosts": "*"
 }
